Fix header display on smaller devices

--- a/static/styles.css
+++ b/static/styles.css
@@ -500,11 +500,11 @@ form {
     .nav-toggle-label {
         display: block;
         height: 25px;
-        left: 40px;
+        left: 30px;
         position: absolute;
-        top: 30px;
+        top: 40px;
         transition: transform 0.2s ease-in-out;
-        width: 2em;
+        width: 32px;
         z-index: 2;
     }
 
@@ -588,6 +588,10 @@ form {
 }
 
 @media (max-width: 576px) {
+    header h1 {
+        font-size: 28px;
+    }
+
     .remove__heading {
         font-size: 14px;
     }
